<resources>
    <string name="app_name">MMobile</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_approach">ApproachActivity</string>
    <string name="personal_profile">personal_profile</string>
    <string name="title_activity_profile">Profile Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">Persönliches Profil</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_gender">Geschlecht</string>
    <string-array name="pref_gender_titles">
        <item>Männlich</item>
        <item>Weiblich</item>
        <item>Trans*</item>
    </string-array>
    <string-array name="pref_gender_values">
        <item>m</item>
        <item>w</item>
        <item>t</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="pref_first_name">John</string>
    <string name="pref_last_name">Doe</string>
    <string name="pref_age">29</string>

    <string name="pref_proximity_threshold">1.2</string>
    <string name="pref_title_first_name">Vorname</string>
    <string name="pref_title_last_name">Nachname</string>
    <string name="pref_title_age">Alter</string>
    <string name="pref_title_proximity_threshold">Proximity Threshold</string>
    <string name="title_activity_swipe">SwipeActivity</string>
    <string name="pref_header_app">App-Einstellungen</string>
    <string name="pref_ip">127.0.0.1</string>
    <string name="pref_title_ip">IP Rest Server</string>
    <string name="pref_port">8080</string>
    <string name="pref_title_port">Port</string>

</resources>
